[gd_scene load_steps=19 format=2]

[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/Slug.gd" type="Script" id=2]
[ext_resource path="res://art/untitled.png" type="Texture" id=3]
[ext_resource path="res://main/PalletSwap.gdshader" type="Shader" id=4]
[ext_resource path="res://art/decay.png" type="Texture" id=5]
[ext_resource path="res://art/slug.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 6 )
region = Rect2( 38, 2, 6, 14 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 50, 6, 14, 8 )

[sub_resource type="ShaderMaterial" id=31]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/palette = 0
shader_param/palette_length = 4

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 6 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 6 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=32]
resource_local_to_scene = true
animations = [ {
"frames": [ SubResource( 38 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 37 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "decay",
"speed": 10.0
}, {
"frames": [ SubResource( 33 ) ],
"loop": true,
"name": "idle",
"speed": 30.0
}, {
"frames": [ SubResource( 36 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[node name="Slug" instance=ExtResource( 1 )]
position = Vector2( 0, 0 )
script = ExtResource( 2 )

[node name="Spike1" type="Sprite" parent="." index="0"]
texture = SubResource( 39 )

[node name="Spike2" type="Sprite" parent="." index="1"]
texture = SubResource( 40 )

[node name="Spike3" type="Sprite" parent="." index="2"]
texture = SubResource( 40 )
flip_h = true

[node name="AnimatedSprite" parent="." index="3"]
material = SubResource( 31 )
frames = SubResource( 32 )
frame = 0
